--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.15.8",
+    "@babel/preset-typescript": "^7.15.0",
     "@types/vue": "^2.0.0",
+    "@vue/compiler-sfc": "^3.2.19",
     "@vue/runtime-dom": "^3.3.9",
     "vue": "^3.3.9",
     "vue-cli": "^2.9.6",
     "vue-loader": "^17.3.1",
-    "vue-template-compiler": "^2.7.15"
+    "vue-template-compiler": "^2.6.14"
   },
   "devDependencies": {
     "@babel/core": "^7.23.5",
